Bug 50571 - [gtk] misnamed gtk-doc strings for webkit_web_view_can_{c|c|p}_clipboard
Summary: [gtk] misnamed gtk-doc strings for webkit_web_view_can_{c|c|p}_clipboard
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKitGTK (show other bugs)
Version: 528+ (Nightly build)
Hardware: PC OS X 10.5
: P2 Normal
Assignee: Nobody
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-12-06 09:23 PST by Diego Escalante Urrelo
Modified: 2010-12-14 05:22 PST (History)
1 user (show)

See Also:


Attachments
Small fix for docs (2.11 KB, patch)
2010-12-06 09:24 PST, Diego Escalante Urrelo
no flags Details | Formatted Diff | Diff
proper changelog (2.18 KB, patch)
2010-12-06 09:36 PST, Diego Escalante Urrelo
no flags Details | Formatted Diff | Diff

Note You need to log in before you can comment on or make changes to this bug.
Description Diego Escalante Urrelo 2010-12-06 09:23:05 PST
The gtk-doc strings for these functions are wrongly copy-pasted from their "can"-less counterparts.

Attaching a patch.
Comment 1 Diego Escalante Urrelo 2010-12-06 09:24:50 PST
Created attachment 75706 [details]
Small fix for docs
Comment 2 Diego Escalante Urrelo 2010-12-06 09:36:48 PST
Created attachment 75707 [details]
proper changelog
Comment 3 WebKit Commit Bot 2010-12-06 11:17:08 PST
Comment on attachment 75707 [details]
proper changelog

Rejecting patch 75707 from commit-queue.

Failed to run "['./WebKitTools/Scripts/webkit-patch', '--status-host=queues.webkit.org', '--bot-id=eseidel-cq-sl', 'build', '--no-clean', '--no-update', '--build-style=both']" exit_code: 1
ERROR: Working directory has local commits, pass --force-clean to continue.

Full output: http://queues.webkit.org/results/6747067
Comment 4 Eric Seidel (no email) 2010-12-14 01:26:40 PST
Comment on attachment 75707 [details]
proper changelog

Sorry for the cq trouble.
Comment 5 WebKit Commit Bot 2010-12-14 04:30:58 PST
The commit-queue encountered the following flaky tests while processing attachment 75707 [details]:

fast/loader/recursive-before-unload-crash.html bug 50880 (authors: beidson@apple.com and eric@webkit.org)
fast/preloader/script.html bug 50879 (author: abarth@webkit.org)
The commit-queue is continuing to process your patch.
Comment 6 WebKit Commit Bot 2010-12-14 04:47:33 PST
The commit-queue encountered the following flaky tests while processing attachment 75707 [details]:

fast/preloader/script.html bug 50879 (author: abarth@webkit.org)
animations/play-state-suspend.html bug 50959 (author: cmarrin@apple.com)
The commit-queue is continuing to process your patch.
Comment 7 WebKit Commit Bot 2010-12-14 05:07:27 PST
The commit-queue encountered the following flaky tests while processing attachment 75707 [details]:

canvas/philip/tests/2d.text.draw.align.center.html bug 51028 (authors: Chang.Shu@nokia.com and kling@webkit.org)
fast/dom/onerror-img.html bug 51019
The commit-queue is continuing to process your patch.
Comment 8 WebKit Commit Bot 2010-12-14 05:22:31 PST
Comment on attachment 75707 [details]
proper changelog

Clearing flags on attachment: 75707

Committed r74018: <http://trac.webkit.org/changeset/74018>
Comment 9 WebKit Commit Bot 2010-12-14 05:22:36 PST
All reviewed patches have been landed.  Closing bug.