2010-12-14  Diego Escalante Urrelo  <descalante@igalia.com>

Reviewed by Xan Lopez.

        [gtk] misnamed gtk-doc strings for webkit_web_view_can_{c|c|p}_clipboard
        https://bugs.webkit.org/show_bug.cgi?id=50571

        * webkit/webkitwebview.cpp:

git-svn-id: svn://svn.chromium.org/blink/trunk@74018 bbb929c8-8fbe-4397-9dbb-9b2b20218538